# learn-prometheus

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: test.yaml
alertmanager/: alertmanager.yml
prom_fastapi/: server.py
prometheus/: prometheus.yml
src/codeforces/: mod.rs
src/codeforces/grade_a/: mod.rs
src/codeforces/grade_a/p263/: README.md  sol.rs
src/codeforces/grade_a/p4/: README.md  sol.rs
src/codeforces/grade_b/: mod.rs
src/codeforces/grade_b/p1703/: README.md  sol.rs
