[tool.poetry]
name = "prom-fastapi"
version = "0.1.0"
description = ""
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pydantic = "^2.8.2"
prometheus-fastapi-instrumentator = "^7.0.0"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
